<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/list_item_id">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/cancer_name"
                android:textStyle="bold"
                android:textColor="#096BB8"
                android:fontFamily="@font/emirates_medium"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="4dp"
                android:textSize="12sp"
                android:text="@string/cancer_desc"
                android:maxLines="5"
                android:lineSpacingExtra="10dp"
                android:fontFamily="@font/emirates_medium"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="end"
                android:text="@string/cancer_details"
                android:textSize="14sp"
                android:fontFamily="@font/emirates_medium"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="#99ff0000" />

            <TextView
                android:id="@+id/tv_causes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_therapy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <TextView
                android:id="@+id/tv_diagnosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <TextView
                android:id="@+id/tv_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>

