<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_prevention"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@color/prevention_color"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/cancer"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/prevention_part"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/emirates_medium"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_detection"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@color/detection_color"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ribbon"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/detection_part"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/emirates_medium"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_food_good"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@color/good_food_color"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/harvest"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/good_food_part"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/emirates_medium"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_food_bad"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:background="@color/bad_food_color"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/unhealthy_food"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/bad_food_part"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/emirates_medium"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_news_who"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:background="@color/news_color"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/news"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/news_part"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/emirates_medium"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_developer"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:background="@color/developer_color"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/person"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/developer_part"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/emirates_medium"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bigvesta_arabic_regular"
            android:gravity="center"
            android:text="@string/cancer_type_part"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_xml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/tabIndicatorColor"
        app:tabMode="fixed"
        app:tabTextColor="@color/white">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager2.widget.ViewPager2>

</LinearLayout>